--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,11 +5,14 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ChangePasswordActivity">
+
+    <ImageView
+        android:id="@+id/iv_change_password_img"
+        android:layout_width="match_parent"
+        android:layout_height="270dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/and_login_img_withchar"/>
 
     <EditText
         android:id="@+id/password"
@@ -25,16 +28,16 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/roundedtextviewbackground"
-        android:padding="15dp" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_change_password_img"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"/>
 
     <EditText
         android:id="@+id/password_confirm"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/prompt_password_confirm"
         android:imeActionLabel="@string/action_sign_in_short"
@@ -44,8 +47,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        android:background="@drawable/roundedtextviewbackground"
-        android:padding="15dp" />
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp" />
 
     <Button
         android:id="@+id/change_password"
@@ -58,9 +61,9 @@
         android:layout_marginBottom="64dp"
         android:enabled="true"
         android:text="@string/action_change_password"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:textColor="@color/colorWhite"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/buttonbackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
