--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,9 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="270dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/and_login_img_withchar">
-
-    </ImageView>
+        android:background="@drawable/and_login_img_withchar"/>
 
     <EditText
         android:id="@+id/username"
