--- a/app/src/main/res/layout/activity_board_detail.xml
+++ b/app/src/main/res/layout/activity_board_detail.xml
@@ -11,12 +11,28 @@
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/whiteTheme">
 
-        <ImageView
-            android:id="@+id/iv_board_detail_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:background="@drawable/icon_more"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize">
+
+            <Button
+                android:id="@+id/btn_board_detail_back"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="10dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/back">
+            </Button>
+
+            <ImageView
+                android:id="@+id/iv_board_detail_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/icon_more"
+                android:layout_marginRight="10dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
