--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBoardPage"
-    tools:context=".NoticeFragment">
+    tools:context=".fragments.NoticeFragment">
 
     <Button
         android:id="@+id/btn_board_add"
