--- a/app/src/main/res/layout/activity_board_detail.xml
+++ b/app/src/main/res/layout/activity_board_detail.xml
@@ -13,25 +13,37 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorWhite">
 
             <Button
                 android:id="@+id/btn_board_detail_back"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="10dp"
-                android:layout_centerVertical="true"
-                android:background="@drawable/back">
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentLeft="true"
+                android:background="@color/colorWhite"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="@string/back">
             </Button>
 
-            <ImageView
-                android:id="@+id/iv_board_detail_more"
+            <Button
+                android:id="@+id/btn_board_detail_more"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/icon_more"
-                android:layout_marginRight="10dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"/>
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentRight="true"
+                android:background="@color/colorWhite"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="@string/more">
+            </Button>
+
+<!--            <ImageView-->
+<!--                android:id="@+id/iv_board_detail_more"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/icon_more"-->
+<!--                android:layout_marginRight="10dp"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:layout_alignParentRight="true"/>-->
         </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
