--- a/app/src/main/res/layout/activity_board_edit.xml
+++ b/app/src/main/res/layout/activity_board_edit.xml
@@ -9,16 +9,34 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:theme="@style/whiteTheme">
+        android:theme="@style/whiteTheme"
+        android:background="@color/colorWhite">
 
-        <Button
-            android:id="@+id/btn_board_edit_complete"
-            android:layout_width="wrap_content"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_gravity="right"
-            android:background="@color/colorWhite"
-            android:text="@string/add">
-        </Button>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btn_board_edit_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentLeft="true"
+                android:background="@color/colorWhite"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="@string/cancel">
+            </Button>
+
+            <Button
+                android:id="@+id/btn_board_edit_complete"
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_alignParentRight="true"
+                android:background="@color/colorWhite"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="@string/add">
+            </Button>
+
+        </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
