--- a/app/src/main/res/layout/activity_employees.xml
+++ b/app/src/main/res/layout/activity_employees.xml
@@ -4,21 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     tools:context=".EmployeesActivity">
 
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:theme="@style/AppTheme.AppBarOverlay">-->
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorWhite"
+        android:theme="@style/whiteTheme">
 
-<!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/toolbar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            android:background="?attr/colorPrimary"-->
-<!--            app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
+            <Button
+                android:id="@+id/btn_employees_back"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@color/colorWhite"
+                android:layout_weight="2"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="@string/back">
+            </Button>
+
+            <EditText
+                android:id="@+id/et_employees_search"
+                android:theme="@style/EditTheme"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:hint="@string/hint_employees_search"
+                android:layout_weight="8"
+                android:background="@null"/>
+
+        </LinearLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_employees" />
 
