--- a/app/src/main/res/layout/content_board_detail.xml
+++ b/app/src/main/res/layout/content_board_detail.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <ListView
@@ -11,8 +12,15 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/ll_board_detail_comment_container">
-
     </ListView>
+
+    <View
+        android:id="@+id/v_board_header_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/lv_board_detail_container"
+        app:layout_constraintBottom_toTopOf="@+id/ll_board_detail_comment_container"
+        android:background="@color/colorView"/>
 
     <LinearLayout
         android:id="@+id/ll_board_detail_comment_container"
@@ -24,19 +32,19 @@
 
         <EditText
             android:id="@+id/et_board_detail_comment_input"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="9"
+            android:layout_weight="8"
             android:background="@null"
+            android:paddingLeft="20dp"
             android:hint="댓글을 남겨주세요.">
-
         </EditText>
 
         <Button
             android:id="@+id/btn_board_detail_add_comment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
             android:textColor="@color/colorCategory"
             android:background="@color/colorWhite"
             android:visibility="invisible"
