--- a/app/src/main/res/layout/content_board_edit.xml
+++ b/app/src/main/res/layout/content_board_edit.xml
@@ -3,39 +3,54 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:padding="15dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/ll_board_edit_category_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:padding="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tv_board_edit_category"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:layout_gravity="center_vertical"
+                android:layout_height="match_parent"
+                android:layout_weight="8"
+                android:gravity="center_vertical"
                 android:text="@string/hint_category"/>
 
-            <ImageView
+            <TextView
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/back"
-                android:layout_weight="1"/>
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="V"
+                android:textSize="19sp"/>
+
+<!--            <ImageView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:background="@drawable/back"-->
+<!--                android:layout_weight="1"/>-->
         </LinearLayout>
 
         <EditText
             android:id="@+id/et_board_edit_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp"
             android:hint="@string/hint_title">
         </EditText>
 
@@ -43,10 +58,9 @@
             android:id="@+id/et_board_edit_contents"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:hint="@string/hint_contents">
         </EditText>
-
-
 
     </LinearLayout>
 
