--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,11 +11,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:elevation="1dp"
-        android:background="@android:color/background_light"
+        android:background="@color/colorWhite"
         app:tabMode="fixed"
         app:tabGravity="fill"
         app:tabTextColor="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/colorAccent" />
+        app:tabSelectedTextColor="@color/colorPrimary" />
 
     <FrameLayout
         android:id="@+id/container"
