--- a/app/src/main/res/layout/dialog_comment_edit.xml
+++ b/app/src/main/res/layout/dialog_comment_edit.xml
@@ -8,7 +8,10 @@
         android:id="@+id/et_board_comment_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="15dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
         <requestFocus/>
     </EditText>
 
