--- a/app/src/main/res/layout/listview_board_header.xml
+++ b/app/src/main/res/layout/listview_board_header.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    android:padding="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -11,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        android:padding="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -25,14 +25,17 @@
             android:id="@+id/tv_board_header_writer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="작성자"
             android:textSize="14sp"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorPrimary"/>
 
         <TextView
             android:id="@+id/tv_board_header_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textSize="14sp"
             android:text="날짜"/>
     </LinearLayout>
 
@@ -40,7 +43,9 @@
         android:id="@+id/v_board_header_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         app:layout_constraintTop_toBottomOf="@+id/ll_board_header_container"
         android:background="@color/colorView"/>
 
@@ -49,24 +54,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/v_board_header_line"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
+        android:padding="15dp"
         android:text="내용"
-        android:textSize="15sp"
-        android:textColor="@color/colorBoardPreview"/>
+        android:textSize="18sp"
+        android:textColor="@color/colorBlack"/>
     
     <LinearLayout
         android:id="@+id/ll_board_header_count_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_board_header_content"
+        android:padding="10dp"
         android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/ll_board_header_like_container"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:padding="5dp"
             android:layout_weight="1">
 
             <ImageView
@@ -80,6 +89,7 @@
                 android:id="@+id/tv_board_header_like_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_gravity="center_vertical"
                 android:text="좋아요"/>
 
@@ -91,10 +101,11 @@
             android:background="@color/colorView"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:padding="5dp"
             android:layout_weight="1">
 
             <ImageView
@@ -107,6 +118,7 @@
                 android:id="@+id/tv_board_header_comment_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_gravity="center_vertical"
                 android:text="2"/>
 
@@ -119,10 +131,11 @@
 
         <LinearLayout
             android:id="@+id/ll_board_header_share_container"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:padding="5dp"
             android:layout_weight="1">
 
             <ImageView
@@ -136,6 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
                 android:text="공유하기"/>
 
         </LinearLayout>
