--- a/app/src/main/res/layout/listview_department.xml
+++ b/app/src/main/res/layout/listview_department.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tv_department_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:textColor="@color/colorBlack"
         android:textSize="20sp"
         android:text="이름"
