--- a/app/src/main/res/layout/listview_boards.xml
+++ b/app/src/main/res/layout/listview_boards.xml
@@ -35,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:maxLines="3"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:text="내용"
             android:textSize="15sp"
             android:textColor="@color/colorBoardPreview"/>
