--- a/app/src/main/res/layout/content_employee_detail.xml
+++ b/app/src/main/res/layout/content_employee_detail.xml
@@ -157,10 +157,11 @@
         android:text="연봉"/>
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="2.5:1"
+        app:layout_constraintDimensionRatio="W,7:1"
         app:layout_constraintTop_toBottomOf="@+id/tv_title_employee_annual_incomes"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:padding="10dp"
         android:layout_marginTop="5dp">
